force-app/main/default/objects/Levels_Settings__c/Levels_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Levels Settings</label>
</CustomObject>