force-app/main/default/objects/Levels_Settings__c/fields/LastJobStartTimeContact__c.field-meta.xml
<CustomField>
    <fullName>LastJobStartTimeContact__c</fullName>
    <description>The last time the Level assignment batch job ran successfully for the Contact object</description>
    <label>Last Job Start Time : Contact</label>
    <type>DateTime</type>
</CustomField>