force-app/main/default/objects/Levels_Settings__c/fields/Level_Assignment_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Level_Assignment_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Used by the Levels Assignment engine</description>
    <inlineHelpText>Number of records per batch to process when recalculating levels.</inlineHelpText>
    <label>Level Assignment Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>